# rscc_cport

./: .gitignore  CMakeLists.txt  README.md  make_build.sh  rscclient.cbp
configuration/: root_directory.h.in
include/client/: client.h  dataenctyption.h  dataoperations.h  iobuffer.h  iostrm.h  packetconstruct.h
include/dataoperations/: floatops.h  intops.h  strops.h
include/iooperations/: buffer.h  crypto.h  iostrm.h
include/rsc/io/: strops.h
src/: client.c  client.h  packetconstruct.c  packetconstruct.h
src/client/: client.c  dataenctryption.c  dataoperations.c  iobuffer.c  iostrm.c  packetconstruct.c
src/dataoperations/: floatops.c  intops.c  strops.c
src/iooperations/: buffer.c  buffer.h  crypto.c  crypto.h  iostrm.c  iostrm.h  strops.c
